- Stars in the gui or now colored gold
- Added recording of dps/healing at end of dungeon. Only works with the details addon enabled
- Added players own dps to GUI if it is available

0.4.8-beta changelog:
- Added option to export success rate to chat in GUI
- Added max and min deaths to filters
- Backend changes