@@ -38,7 +38,6 @@ This addon is still in beta development, but you can already download it from cu
     - Add option tickboxes to show specific columns
       - Note, affixes, party, details stuff
     - Make GUI side scrollable if it gets too large?
-    - If showing details stuff design it in a readable way
     - grouped players success rate
 
 ## Notes section
@@ -50,7 +49,3 @@ This addon is still in beta development, but you can already download it from cu
     - Add role filter
 
 ## Data storage
-    - Include details data about partymembers
-      - Overall dps
-      - Overall hps
-      - Interrupts
