@@ -157,9 +157,19 @@ local function safeExec(name, func, ...)
     if success then
         return result
     end
-    print(string.format("%sKeyCount: %sWarning! an error occurred in function '%s'! Data may not be correct, check your SavedVariables file.%s", KeyCount.defaults.colors.chatAnnounce, KeyCount.defaults.colors.chatError, name, KeyCount.defaults.colors.reset))
-    print(string.format("%sKeyCount: %sError: %s%s", KeyCount.defaults.colors.chatAnnounce, KeyCount.defaults.colors.chatError, result, KeyCount.defaults.colors.reset))
+    print(string.format(
+        "%sKeyCount: %sWarning! an error occurred in function '%s'! Data may not be correct, check your SavedVariables file.%s",
+        KeyCount.defaults.colors.chatAnnounce, KeyCount.defaults.colors.chatError, name, KeyCount.defaults.colors.reset))
+    print(string.format("%sKeyCount: %sError: %s%s. Please report the error on the addon's curse page.", KeyCount.defaults.colors.chatAnnounce,
+        KeyCount.defaults.colors.chatError, result, KeyCount.defaults.colors.reset))
     return success
+end
+
+local function addSymbol(text, amount, symbol, color)
+    color = color or KeyCount.defaults.colors.gold.chat
+    symbol = symbol or KeyCount.defaults.dungeonPlusChar
+    local symbols = KeyCount.util.colorText(symbol:rep(amount), color)
+    return text .. symbols
 end
 
 KeyCount.util = {
@@ -173,6 +183,7 @@ KeyCount.util = {
     convertOldPartyFormat = convertOldPartyFormat,
     concatTable = concatTable,
     colorText = colorText,
-    getKeyForValue=getKeyForValue,
+    getKeyForValue = getKeyForValue,
     safeExec = safeExec,
+    addSymbol = addSymbol,
 }
